--- a/evaluacion.html
+++ b/evaluacion.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
@@ -23,9 +23,74 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Outfit:wght@500;600;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
+    <!-- Login Overlay -->
+    <div id="loginOverlay">
+      <div class="login-card">
+        <div class="login-header">
+          <div class="login-icon">
+            <i class="bi bi-shield-lock"></i>
+          </div>
+          <h4 class="mb-1">Acceso Restringido</h4>
+          <p class="mb-0 opacity-75 small">Panel de Evaluación y Ranking</p>
+        </div>
+        <div class="p-4">
+          <form id="formLogin">
+            <div class="mb-3">
+              <label for="loginUsuario" class="form-label fw-semibold">
+                <i class="bi bi-person me-1"></i>Usuario
+              </label>
+              <input
+                type="text"
+                class="form-control form-control-lg"
+                id="loginUsuario"
+                placeholder="Ingrese su usuario"
+                required
+                autocomplete="username"
+              />
+            </div>
+            <div class="mb-4">
+              <label for="loginPassword" class="form-label fw-semibold">
+                <i class="bi bi-key me-1"></i>Contraseña
+              </label>
+              <div class="input-group">
+                <input
+                  type="password"
+                  class="form-control form-control-lg"
+                  id="loginPassword"
+                  placeholder="Ingrese su contraseña"
+                  required
+                  autocomplete="current-password"
+                />
+                <button
+                  class="btn btn-outline-secondary"
+                  type="button"
+                  id="togglePassword"
+                >
+                  <i class="bi bi-eye" id="eyeIcon"></i>
+                </button>
+              </div>
+            </div>
+            <div id="loginError" class="alert alert-danger d-none mb-3">
+              <i class="bi bi-exclamation-triangle me-2"></i>
+              <span id="loginErrorMsg">Credenciales incorrectas</span>
+            </div>
+            <button type="submit" class="btn btn-primary-custom btn-lg w-100">
+              <i class="bi bi-box-arrow-in-right me-2"></i>Iniciar Sesión
+            </button>
+          </form>
+          <div class="text-center mt-3">
+            <small class="text-muted">
+              <i class="bi bi-info-circle me-1"></i>Acceso solo para personal
+              autorizado
+            </small>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <nav
       class="navbar navbar-expand-lg navbar-dark bg-primary-custom sticky-top shadow-lg"
     >
@@ -40,7 +105,7 @@
             <i class="bi bi-building fs-4"></i>
           </div>
           <div>
-            <h1 class="h5 mb-0 fw-bold">Municipalidad Provincial</h1>
+            <h1 class="h5 mb-0 fw-bold">Municipalidad de Maynas</h1>
             <small class="text-white-50"
               >Sistema de Gestión de Convocatorias</small
             >
@@ -63,6 +128,15 @@
               <span class="nav-link active nav-tab-custom">
                 <i class="bi bi-graph-up me-1"></i>Evaluación y Ranking
               </span>
+            </li>
+            <li class="nav-item">
+              <button
+                class="nav-link nav-tab-custom"
+                onclick="cerrarSesion()"
+                title="Cerrar Sesión"
+              >
+                <i class="bi bi-box-arrow-right me-1"></i>Salir
+              </button>
             </li>
           </ul>
         </div>
@@ -495,6 +569,10 @@
                           <th><i class="bi bi-briefcase me-1"></i>Plaza</th>
                           <th><i class="bi bi-star me-1"></i>Puntaje Final</th>
                           <th><i class="bi bi-check-circle me-1"></i>Estado</th>
+                          <th class="text-center">
+                            <i class="bi bi-file-earmark-check me-1"></i
+                            >Contrato
+                          </th>
                         </tr>
                       </thead>
                       <tbody id="tbodyRanking"></tbody>
@@ -538,11 +616,134 @@
       </div>
     </main>
 
+    <!-- Modal de Confirmación de Eliminación -->
+    <div
+      class="modal fade"
+      id="modalEliminar"
+      tabindex="-1"
+      aria-labelledby="modalEliminarLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header bg-danger text-white">
+            <h5 class="modal-title" id="modalEliminarLabel">
+              <i class="bi bi-exclamation-triangle me-2"></i>Confirmar
+              Eliminación
+            </h5>
+            <button
+              type="button"
+              class="btn-close btn-close-white"
+              data-bs-dismiss="modal"
+              aria-label="Cerrar"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <p class="mb-0">¿Está seguro que desea eliminar al postulante:</p>
+            <p
+              class="fw-bold text-danger fs-5 mb-0"
+              id="nombrePostulanteEliminar"
+            ></p>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              <i class="bi bi-x-circle me-1"></i>Cancelar
+            </button>
+            <button
+              type="button"
+              class="btn btn-danger"
+              id="btnConfirmarEliminar"
+            >
+              <i class="bi bi-trash me-1"></i>Eliminar
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Toast de Notificación -->
+    <div class="toast-container position-fixed bottom-0 end-0 p-3">
+      <div
+        id="toastNotificacion"
+        class="toast"
+        role="alert"
+        aria-live="assertive"
+        aria-atomic="true"
+      >
+        <div class="toast-header" id="toastHeader">
+          <i class="bi bi-info-circle me-2" id="toastIcon"></i>
+          <strong class="me-auto" id="toastTitulo">Notificación</strong>
+          <button
+            type="button"
+            class="btn-close"
+            data-bs-dismiss="toast"
+            aria-label="Cerrar"
+          ></button>
+        </div>
+        <div class="toast-body" id="toastMensaje"></div>
+      </div>
+    </div>
+
+    <!-- Modal de Confirmación de Firma de Contrato -->
+    <div
+      class="modal fade"
+      id="modalFirmarContrato"
+      tabindex="-1"
+      aria-labelledby="modalFirmarContratoLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header bg-success text-white">
+            <h5 class="modal-title" id="modalFirmarContratoLabel">
+              <i class="bi bi-pen me-2"></i>Confirmar Firma de Contrato
+            </h5>
+            <button
+              type="button"
+              class="btn-close btn-close-white"
+              data-bs-dismiss="modal"
+              aria-label="Cerrar"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <p class="mb-2">
+              ¿Confirma la firma de contrato para el postulante:
+            </p>
+            <p
+              class="fw-bold text-success fs-5 mb-0"
+              id="nombrePostulanteFirma"
+            ></p>
+            <small class="text-muted">Esta acción no se puede deshacer.</small>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              <i class="bi bi-x-circle me-1"></i>Cancelar
+            </button>
+            <button
+              type="button"
+              class="btn btn-success"
+              id="btnConfirmarFirma"
+            >
+              <i class="bi bi-pen me-1"></i>Firmar Contrato
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <footer class="footer bg-primary-dark text-white py-4">
       <div class="container-fluid px-4">
         <div class="row align-items-center">
           <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-            <h6 class="fw-bold mb-1">Municipalidad Provincial</h6>
+            <h6 class="fw-bold mb-1">Municipalidad de Maynas</h6>
             <p class="small mb-0 opacity-75">
               Sistema de Gestión de Convocatorias y Contratación
             </p>
@@ -571,6 +772,6 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       crossorigin="anonymous"
     ></script>
-    <script src="app.js"></script>
+    <script type="module" src="js/app.js"></script>
   </body>
 </html>
